--- a/src/components/table.module.css
+++ b/src/components/table.module.css
@@ -3,17 +3,27 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items:flex-start;
+    align-items:center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 1rem;
     /* justify-content: space-evenly; */
 }
 .currency{
-    margin: 1rem;
+    margin: 0 auto;
     width: 124px;
     background-color: #e9f2f1;
     border-radius: 8px;
     color: black;
     border: 2px solid #ddd5d0;
     transition: border-color 0.25s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.currency>p{
+    margin: 0 auto;
+    padding: 0.5rem;
 }
 .currency:hover, .selected{
     background-color: #3e323c;
